# python_template

./: README.md  mkdocs.yml  pyproject.toml  pytest.ini
docs/: index.md
